deploy/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: cert-manager-prod
  name: dict
  namespace: mialkin
spec:
  tls:
    - hosts:
        - dict.mialkin.ru
      secretName: dict-prod-certificate
  rules:
    - host: dict.mialkin.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dict
                port:
                  number: 80
